ls1/deployment/app-1-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pet
  labels:
    app: pet
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pet-server
  template:
    metadata:
      labels:
        app: pet-server
    spec:
      containers:
        - name: pet-application
          image: killot/mmdsd-app-1:v4
          ports:
            - containerPort: 8080
