ls1/deployment/service-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: pet-service
spec:
  selector:
    app: pet-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
