ls1/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pet-project-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: pet-project.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pet-service
                port:
                  number: 80
